<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    app:layout_anchorGravity="left">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="119dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputLong1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/insulin"
                android:inputType="numberDecimal"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/inputLong2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/carbs"
                android:inputType="numberDecimal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switch1"
                android:layout_weight="1"
                android:text="@string/pause"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textStyle="bold"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <NumberPicker
            android:id="@+id/minutePicker"
            style="@android:style/Widget.Material.Light.NumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/time_date"
        android:textStyle="bold" />


    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:timePickerMode="spinner" />

    <DatePicker
        android:id="@+id/datePicker"
        style="@android:style/Widget.DatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:spinnersShown="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/cancelButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/applyButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/apply" />
    </LinearLayout>
</LinearLayout>